// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RenderList > should be able to provide a custom list item renderer 1`] = `
<ul>
  <li
    data-testid="listitem"
  >
    Item 1
  </li>
  <li
    data-testid="listitem"
  >
    Item 2
  </li>
  <li
    data-testid="listitem"
  >
    Item 3
  </li>
</ul>
`;

exports[`RenderList > should be able to render an unordered list using asterisks 1`] = `
<ul>
  <li>
    Asterisk Item 1
  </li>
  <li>
    Asterisk Item 2
  </li>
  <li>
    Asterisk Item 3
  </li>
</ul>
`;

exports[`RenderList > should be able to render an unordered list using hyphens 1`] = `
<ul>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
  <li>
    Item 3
  </li>
</ul>
`;

exports[`RenderList > should be able to render loose lists 1`] = `
<ul>
  <li>
    <p>
      Item 1
    </p>
     
    <p>
      Second Paragraph of Item 1
    </p>
  </li>
  <li>
    <p>
      Item 2
    </p>
  </li>
  <li>
    <p>
      Item 3
    </p>
     
    <p>
      Second Paragraph of Item 3
    </p>
  </li>
</ul>
`;

exports[`RenderList > should be able to render loose task lists without a custom renderer even if the styles and markup isn't great 1`] = `
<ul>
  <li>
    <p>
      <input
        id="_r_6_"
        type="checkbox"
      />
       
      <label
        for="_r_6_"
      >
        Item 1
      </label>
    </p>
     
    Second Paragraph of Item 1
  </li>
  <li>
    <p>
      <input
        checked=""
        id="_r_8_"
        type="checkbox"
      />
       
      <label
        for="_r_8_"
      >
        Item 2
      </label>
    </p>
  </li>
  <li>
    <p>
      <input
        checked=""
        id="_r_a_"
        type="checkbox"
      />
       
      <label
        for="_r_a_"
      >
        Item 3
      </label>
    </p>
     
    Second Paragraph of Item 3
  </li>
</ul>
`;

exports[`RenderList > should be able to render nested lists 1`] = `
<ol
  start="1"
>
  <li>
    Ordered Item 1
    <ol
      start="1"
    >
      <li>
        Ordered Subitem 1
        <ul>
          <li>
            Three Down Hyphen
          </li>
        </ul>
      </li>
      <li>
        Ordered Subitem 2
        <ul>
          <li>
            Three Down Asterisk
          </li>
        </ul>
      </li>
    </ol>
  </li>
</ol>
`;

exports[`RenderList > should be able to render ordered lists 1`] = `
<ol
  start="1"
>
  <li>
    Ordered Item 1
  </li>
  <li>
    Ordered Item 2
  </li>
  <li>
    Ordered Item 3
  </li>
</ol>
`;

exports[`RenderList > should be able to render task lists 1`] = `
<ul>
  <li>
    <input
      id="_r_0_"
      type="checkbox"
    />
     
    <label
      for="_r_0_"
    >
      Unchecked Task
    </label>
  </li>
  <li>
    <input
      checked=""
      id="_r_2_"
      type="checkbox"
    />
     
    <label
      for="_r_2_"
    >
      Checked Task Lowercase
    </label>
  </li>
  <li>
    <input
      checked=""
      id="_r_4_"
      type="checkbox"
    />
     
    <label
      for="_r_4_"
    >
      Checked Task Uppercase
    </label>
  </li>
</ul>
`;
